# torchgmm

./: .cruft.json  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
docs/: api.md  benchmark.md  conf.py  contributing.md  index.md
docs/notebooks/: example.ipynb
src/torchgmm/: __init__.py
src/torchgmm/base/: __init__.py
src/torchgmm/base/data/: __init__.py  collation.py  loader.py  sampler.py  types.py
src/torchgmm/base/estimator/: _protocols.py  base.py  configurable.py  mixins.py
src/torchgmm/base/nn/: _protocols.py  configurable.py
src/torchgmm/base/utils/: generics.py
src/torchgmm/bayes/: __init__.py
src/torchgmm/bayes/core/: _jit.py  normal.py  types.py  utils.py
src/torchgmm/bayes/gmm/: estimator.py  lightning_module.py  metrics.py  model.py  types.py
src/torchgmm/clustering/kmeans/: estimator.py  lightning_module.py  metrics.py  model.py  types.py
src/torchgmm/utils/: lightning_module.py
tests/: test_basic.py
tests/_data/: gmm.py  normal.py
tests/bayes/core/: benchmark_log_normal.py  benchmark_precision_cholesky.py  test_normal.py
tests/bayes/gmm/: benchmark_gmm_estimator.py  test_gmm_estimator.py  test_gmm_metrics.py  test_gmm_model.py
tests/clustering/kmeans/: benchmark_kmeans_estimator.py  test_kmeans_estimator.py  test_kmeans_model.py
